# vector

./: CMakeLists.txt  README.md  rebuild.bat
.github/workflows/: ci.yml
cmake/: FindCMocka.cmake
include/: vector.h
src/: vector.c
test/: test_vector.c
